Fix playlist scroll on mobile

--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ input[type="range"] {
   margin-left: 2rem;
   height: auto;
   width: clamp(250px, 25vw, 300px);
-  overflow-y: scroll;
+  overflow-y: auto;
   scrollbar-width: none;
 }
 
